--- a/src/ToHeaven/PackagePage.form
+++ b/src/ToHeaven/PackagePage.form
@@ -79,6 +79,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe40;&#xe1e;&#xe34;&#xe48;&#xe21;&#xe2a;&#xe34;&#xe19;&#xe04;&#xe49;&#xe32;"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addBTActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
