--- a/src/StoreToHeaven/FrameDetail.form
+++ b/src/StoreToHeaven/FrameDetail.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="cc" green="cc" red="ff" type="rgb"/>
+      <Color blue="e0" green="f4" red="f4" type="rgb"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -93,7 +93,7 @@
     <Component class="javax.swing.JCheckBox" name="deleteCB">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="cc" red="ff" type="rgb"/>
+          <Color blue="e0" green="f4" red="f4" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="TH SarabunPSK" size="18" style="0"/>
