--- a/src/StoreToHeaven/SnackBoxDetail.form
+++ b/src/StoreToHeaven/SnackBoxDetail.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="b2" green="a1" red="73" type="rgb"/>
+      <Color blue="e0" green="f4" red="f4" type="rgb"/>
     </Property>
   </Properties>
   <AuxValues>
