--- a/src/ToHeaven/CandleProductPage.form
+++ b/src/ToHeaven/CandleProductPage.form
@@ -30,7 +30,7 @@
           <Color blue="3d" green="55" red="65" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="TH SarabunPSK" size="24" style="1"/>
+          <Font name="TH Sarabun New" size="24" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
