--- a/src/StoreToHeaven/AddProduct.form
+++ b/src/StoreToHeaven/AddProduct.form
@@ -28,6 +28,9 @@
   <SubComponents>
     <Component class="javax.swing.JComboBox" name="addChoices">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="d7" green="ef" red="f3" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="TH Sarabun New" size="24" style="0"/>
         </Property>
@@ -64,7 +67,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="8c" green="97" red="94" type="rgb"/>
+          <Color blue="9c" green="af" red="b7" type="rgb"/>
         </Property>
       </Properties>
       <Constraints>
@@ -80,7 +83,7 @@
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="2a" green="34" red="37" type="rgb"/>
+              <Color blue="7f" green="96" red="9d" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="TH Sarabun New" size="48" style="0"/>
@@ -98,6 +101,9 @@
     </Container>
     <Component class="javax.swing.JButton" name="confirmBT">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="d7" green="ef" red="f3" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="TH SarabunPSK" size="24" style="0"/>
         </Property>
@@ -116,14 +122,14 @@
     <Container class="javax.swing.JPanel" name="showAddProduct">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="e0" green="f4" red="f4" type="rgb"/>
+          <Color blue="e2" green="ee" red="ee" type="rgb"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="e0" green="f4" red="f4" type="rgb"/>
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;//AddCoffin coffin = new AddCoffin(showAddProduct);&#xa;AddFrame frame = new AddFrame(showAddProduct);&#xa;AddIncense incense = new AddIncense(showAddProduct);&#xa;AddCandle candle = new AddCandle(showAddProduct);&#xa;AddOffering offering = new AddOffering(showAddProduct);&#xa;AddSandalWood sandalwood = new AddSandalWood(showAddProduct);&#xa;AddSnackBox snackbox = new AddSnackBox(showAddProduct);&#xa;AddSouvenir souvenir= new AddSouvenir(showAddProduct);&#xa;emptyPanel.setBackground(new java.awt.Color(153, 255, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;//showAddProduct.add(coffin, &quot;coffin&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);&#xa;showAddProduct.add(frame, &quot;frame&quot;);&#xa;showAddProduct.add(incense, &quot;incense&quot;);&#xa;showAddProduct.add(candle, &quot;candle&quot;);&#xa;showAddProduct.add(offering, &quot;offering&quot;);&#xa;showAddProduct.add(sandalwood, &quot;sandalwood&quot;);&#xa;showAddProduct.add(snackbox, &quot;snackbox&quot;);&#xa;showAddProduct.add(souvenir, &quot;souvenir&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;//AddCoffin coffin = new AddCoffin(showAddProduct);&#xa;AddFrame frame = new AddFrame(showAddProduct);&#xa;AddIncense incense = new AddIncense(showAddProduct);&#xa;AddCandle candle = new AddCandle(showAddProduct);&#xa;AddOffering offering = new AddOffering(showAddProduct);&#xa;AddSandalWood sandalwood = new AddSandalWood(showAddProduct);&#xa;AddSnackBox snackbox = new AddSnackBox(showAddProduct);&#xa;AddSouvenir souvenir= new AddSouvenir(showAddProduct);&#xa;emptyPanel.setBackground(new java.awt.Color(225, 225, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;//showAddProduct.add(coffin, &quot;coffin&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);&#xa;showAddProduct.add(frame, &quot;frame&quot;);&#xa;showAddProduct.add(incense, &quot;incense&quot;);&#xa;showAddProduct.add(candle, &quot;candle&quot;);&#xa;showAddProduct.add(offering, &quot;offering&quot;);&#xa;showAddProduct.add(sandalwood, &quot;sandalwood&quot;);&#xa;showAddProduct.add(snackbox, &quot;snackbox&quot;);&#xa;showAddProduct.add(souvenir, &quot;souvenir&quot;);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
