--- a/src/StoreToHeaven/AddSnackBox.form
+++ b/src/StoreToHeaven/AddSnackBox.form
@@ -3,7 +3,7 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="e0" green="f4" red="f4" type="rgb"/>
+      <Color blue="e2" green="ee" red="ee" type="rgb"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[480, 480]"/>
@@ -85,7 +85,7 @@
         <Container class="javax.swing.JPanel" name="pic_detailJP">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ec" green="ec" red="dc" type="rgb"/>
+              <Color blue="e0" green="f4" red="f4" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[408, 231]"/>
