--- a/src/ToHeaven/CustomFuneral.form
+++ b/src/ToHeaven/CustomFuneral.form
@@ -24,7 +24,7 @@
     <Container class="javax.swing.JPanel" name="menuCustom">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="cc" red="0" type="rgb"/>
+          <Color blue="3d" green="55" red="65" type="rgb"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[800, 80]"/>
@@ -43,7 +43,10 @@
         <Component class="javax.swing.JLabel" name="coffinStageLB">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="MiTNThin" size="24" style="1"/>
+              <Font name="TH Sarabun New" size="30" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe2a;&#xe31;&#xe48;&#xe07;&#xe0b;&#xe37;&#xe49;&#xe2d;&#xe42;&#xe25;&#xe07;&#xe28;&#xe1e;"/>
           </Properties>
@@ -56,7 +59,10 @@
         <Component class="javax.swing.JLabel" name="funeralStageLB">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="MiTNThin" size="24" style="1"/>
+              <Font name="TH Sarabun New" size="30" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe07;&#xe32;&#xe19;&#xe0c;&#xe32;&#xe1b;&#xe19;&#xe01;&#xe34;&#xe08;"/>
           </Properties>
@@ -69,7 +75,10 @@
         <Component class="javax.swing.JLabel" name="boneStageLB">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="MiTNThin" size="24" style="1"/>
+              <Font name="TH Sarabun New" size="30" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe01;&#xe32;&#xe23;&#xe08;&#xe31;&#xe14;&#xe01;&#xe32;&#xe23;&#xe2d;&#xe31;&#xe10;&#xe34;"/>
           </Properties>
@@ -82,6 +91,11 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="buttonPanel">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="3d" green="55" red="65" type="rgb"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
           <BorderConstraints direction="Last"/>
@@ -96,7 +110,7 @@
                   <Component id="backBT" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="212" max="-2" attributes="0"/>
                   <Component id="confirmBT" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="206" max="32767" attributes="0"/>
+                  <EmptySpace pref="202" max="32767" attributes="0"/>
                   <Component id="nextBT" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
               </Group>
@@ -105,7 +119,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="9" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="confirmBT" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="nextBT" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -120,7 +134,7 @@
         <Component class="javax.swing.JButton" name="confirmBT">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="TH SarabunPSK" size="18" style="0"/>
+              <Font name="TH Sarabun New" size="18" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe22;&#xe37;&#xe19;&#xe22;&#xe31;&#xe19;&#xe2a;&#xe34;&#xe19;&#xe04;&#xe49;&#xe32;"/>
           </Properties>
@@ -128,7 +142,7 @@
         <Component class="javax.swing.JButton" name="nextBT">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="TH SarabunPSK" size="18" style="0"/>
+              <Font name="TH Sarabun New" size="18" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe2b;&#xe19;&#xe49;&#xe32;&#xe16;&#xe31;&#xe14;&#xe44;&#xe1b;&gt;"/>
           </Properties>
@@ -139,7 +153,7 @@
         <Component class="javax.swing.JButton" name="backBT">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="TH SarabunPSK" size="18" style="0"/>
+              <Font name="TH Sarabun New" size="18" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&lt;&#xe22;&#xe49;&#xe2d;&#xe19;&#xe01;&#xe25;&#xe31;&#xe1a;"/>
           </Properties>
@@ -152,7 +166,7 @@
     <Container class="javax.swing.JPanel" name="funeralPanel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="ff" red="ff" type="rgb"/>
+          <Color blue="e0" green="f4" red="f4" type="rgb"/>
         </Property>
       </Properties>
       <Constraints>
@@ -169,7 +183,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="1647" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="1646" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
