--- a/src/ToHeaven/SnackBoxProduct.form
+++ b/src/ToHeaven/SnackBoxProduct.form
@@ -9,7 +9,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="dc" green="d9" red="f2" type="rgb"/>
+      <Color blue="e0" green="f4" red="f4" type="rgb"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[800, 240]"/>
