--- a/src/StoreToHeaven/AddProduct.form
+++ b/src/StoreToHeaven/AddProduct.form
@@ -34,20 +34,8 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="TH Sarabun New" size="24" style="0"/>
         </Property>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="11">
-            <StringItem index="0" value="&#xe01;&#xe23;&#xe38;&#xe13;&#xe32;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;&#xe15;&#xe31;&#xe27;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;"/>
-            <StringItem index="1" value="&#xe42;&#xe25;&#xe07;&#xe28;&#xe1e;"/>
-            <StringItem index="2" value="&#xe1e;&#xe27;&#xe07;&#xe2b;&#xe23;&#xe35;&#xe14;"/>
-            <StringItem index="3" value="&#xe14;&#xe2d;&#xe01;&#xe44;&#xe21;&#xe49;&#xe08;&#xe31;&#xe19;&#xe17;&#xe19;&#xe4c;"/>
-            <StringItem index="4" value="&#xe0a;&#xe38;&#xe14;&#xe44;&#xe17;&#xe22;&#xe18;&#xe23;&#xe23;&#xe21;"/>
-            <StringItem index="5" value="&#xe18;&#xe39;&#xe1b;"/>
-            <StringItem index="6" value="&#xe40;&#xe17;&#xe35;&#xe22;&#xe19;"/>
-            <StringItem index="7" value="&#xe0a;&#xe38;&#xe14;&#xe2d;&#xe32;&#xe2b;&#xe32;&#xe23;&#xe27;&#xe48;&#xe32;&#xe07;"/>
-            <StringItem index="8" value="&#xe02;&#xe2d;&#xe07;&#xe0a;&#xe33;&#xe23;&#xe48;&#xe27;&#xe22;"/>
-            <StringItem index="9" value="&#xe01;&#xe23;&#xe2d;&#xe1a;&#xe23;&#xe39;&#xe1b;"/>
-            <StringItem index="10" value="&#xe41;&#xe1e;&#xe47;&#xe04;&#xe40;&#xe01;&#xe08;"/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;&#xe01;&#xe23;&#xe38;&#xe13;&#xe32;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;&#xe15;&#xe31;&#xe27;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;&quot;, &quot;&#xe42;&#xe25;&#xe07;&#xe28;&#xe1e;&quot;, &quot;&#xe1e;&#xe27;&#xe07;&#xe2b;&#xe23;&#xe35;&#xe14;&quot;, &quot;&#xe14;&#xe2d;&#xe01;&#xe44;&#xe21;&#xe49;&#xe08;&#xe31;&#xe19;&#xe17;&#xe19;&#xe4c;&quot;, &quot;&#xe0a;&#xe38;&#xe14;&#xe44;&#xe17;&#xe22;&#xe18;&#xe23;&#xe23;&#xe21;&quot;, &quot;&#xe18;&#xe39;&#xe1b;&quot;, &quot;&#xe40;&#xe17;&#xe35;&#xe22;&#xe19;&quot;, &quot;&#xe0a;&#xe38;&#xe14;&#xe2d;&#xe32;&#xe2b;&#xe32;&#xe23;&#xe27;&#xe48;&#xe32;&#xe07;&quot;, &quot;&#xe02;&#xe2d;&#xe07;&#xe0a;&#xe33;&#xe23;&#xe48;&#xe27;&#xe22;&quot;, &quot;&#xe01;&#xe23;&#xe2d;&#xe1a;&#xe23;&#xe39;&#xe1b;&quot;, &quot;&#xe41;&#xe1e;&#xe47;&#xe04;&#xe40;&#xe01;&#xe08;&quot;, &quot;&#xe27;&#xe31;&#xe14;&quot; })" type="code"/>
         </Property>
         <Property name="alignmentX" type="float" value="1.0"/>
         <Property name="alignmentY" type="float" value="1.0"/>
@@ -129,7 +117,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;//AddCoffin coffin = new AddCoffin(showAddProduct);&#xa;AddFrame frame = new AddFrame(showAddProduct);&#xa;AddIncense incense = new AddIncense(showAddProduct);&#xa;AddCandle candle = new AddCandle(showAddProduct);&#xa;AddOffering offering = new AddOffering(showAddProduct);&#xa;AddSandalWood sandalwood = new AddSandalWood(showAddProduct);&#xa;AddSnackBox snackbox = new AddSnackBox(showAddProduct);&#xa;AddSouvenir souvenir= new AddSouvenir(showAddProduct);&#xa;emptyPanel.setBackground(new java.awt.Color(225, 225, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;//showAddProduct.add(coffin, &quot;coffin&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);&#xa;showAddProduct.add(frame, &quot;frame&quot;);&#xa;showAddProduct.add(incense, &quot;incense&quot;);&#xa;showAddProduct.add(candle, &quot;candle&quot;);&#xa;showAddProduct.add(offering, &quot;offering&quot;);&#xa;showAddProduct.add(sandalwood, &quot;sandalwood&quot;);&#xa;showAddProduct.add(snackbox, &quot;snackbox&quot;);&#xa;showAddProduct.add(souvenir, &quot;souvenir&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;AddCoffin coffin = new AddCoffin(showAddProduct);&#xa;AddFrame frame = new AddFrame(showAddProduct);&#xa;AddIncense incense = new AddIncense(showAddProduct);&#xa;AddCandle candle = new AddCandle(showAddProduct);&#xa;AddOffering offering = new AddOffering(showAddProduct);&#xa;AddSandalWood sandalwood = new AddSandalWood(showAddProduct);&#xa;AddSnackBox snackbox = new AddSnackBox(showAddProduct);&#xa;AddSouvenir souvenir= new AddSouvenir(showAddProduct);&#xa;AddTemple temple = new AddTemple(showAddProduct);&#xa;&#xa;emptyPanel.setBackground(new java.awt.Color(225, 225, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;showAddProduct.add(coffin, &quot;coffin&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);&#xa;showAddProduct.add(frame, &quot;frame&quot;);&#xa;showAddProduct.add(incense, &quot;incense&quot;);&#xa;showAddProduct.add(candle, &quot;candle&quot;);&#xa;showAddProduct.add(offering, &quot;offering&quot;);&#xa;showAddProduct.add(sandalwood, &quot;sandalwood&quot;);&#xa;showAddProduct.add(snackbox, &quot;snackbox&quot;);&#xa;showAddProduct.add(souvenir, &quot;souvenir&quot;);&#xa;showAddProduct.add(temple, &quot;temple&quot;);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
