--- a/src/ToHeaven/LoginPage.form
+++ b/src/ToHeaven/LoginPage.form
@@ -91,7 +91,7 @@
     <Component class="javax.swing.JLabel" name="jLoginText">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="36" style="1"/>
+          <Font name="TH Sarabun New" size="36" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="LOGIN"/>
       </Properties>
@@ -99,7 +99,7 @@
     <Component class="javax.swing.JLabel" name="jLabelUsernameText">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="24" style="1"/>
+          <Font name="TH Sarabun New" size="24" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="USERNAME  : "/>
       </Properties>
@@ -107,7 +107,7 @@
     <Component class="javax.swing.JLabel" name="jLabelPasswordText">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="24" style="1"/>
+          <Font name="TH Sarabun New" size="24" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="PASSWORD  : "/>
       </Properties>
@@ -134,6 +134,9 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="showPassRiado">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="TH Sarabun New" size="18" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Show password"/>
       </Properties>
       <Events>
@@ -143,7 +146,7 @@
     <Component class="javax.swing.JButton" name="loginButton">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="18" style="1"/>
+          <Font name="TH Sarabun New" size="36" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Login"/>
       </Properties>
@@ -155,7 +158,7 @@
     <Component class="javax.swing.JButton" name="registerButton">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="0"/>
+          <Font name="TH Sarabun New" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Register"/>
       </Properties>
