--- a/src/ToHeaven/MainFrame.form
+++ b/src/ToHeaven/MainFrame.form
@@ -24,7 +24,7 @@
     <Container class="javax.swing.JPanel" name="menuBar">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ed" red="db" type="rgb"/>
+          <Color blue="d7" green="e4" red="c8" type="rgb"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[800, 100]"/>
@@ -43,35 +43,41 @@
         <Property name="useNullLayout" type="boolean" value="true"/>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JToggleButton" name="customBT">
+        <Component class="javax.swing.JToggleButton" name="templeBT">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="ff" type="rgb"/>
+              <Color blue="d7" green="e4" red="c8" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="TH Sarabun New" size="30" style="0"/>
+              <Font name="TH Sarabun New" size="24" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&#xe1b;&#xe23;&#xe31;&#xe1a;&#xe41;&#xe15;&#xe48;&#xe07;"/>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="33" red="66" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="&#xe27;&#xe31;&#xe14;"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="customBTMouseClicked"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="templeBTMouseClicked"/>
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="650" y="0" width="110" height="100"/>
+              <AbsoluteConstraints x="590" y="0" width="100" height="100"/>
             </Constraint>
           </Constraints>
         </Component>
         <Component class="javax.swing.JToggleButton" name="packageBT">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="ff" type="rgb"/>
+              <Color blue="d7" green="e4" red="c8" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="TH Sarabun New" size="30" style="0"/>
+              <Font name="TH Sarabun New" size="24" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="33" red="66" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe41;&#xe1e;&#xe47;&#xe04;&#xe40;&#xe01;&#xe08;&#xa;"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -83,17 +89,20 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="530" y="0" width="110" height="100"/>
+              <AbsoluteConstraints x="480" y="0" width="100" height="100"/>
             </Constraint>
           </Constraints>
         </Component>
         <Component class="javax.swing.JToggleButton" name="productBT">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="ff" type="rgb"/>
+              <Color blue="d7" green="e4" red="c8" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="TH Sarabun New" size="30" style="0"/>
+              <Font name="TH Sarabun New" size="24" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="33" red="66" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe1c;&#xe25;&#xe34;&#xe15;&#xe20;&#xe31;&#xe13;&#xe11;&#xe4c;"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -105,17 +114,20 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="410" y="0" width="110" height="100"/>
+              <AbsoluteConstraints x="360" y="0" width="110" height="100"/>
             </Constraint>
           </Constraints>
         </Component>
         <Component class="javax.swing.JToggleButton" name="homeBT">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="ff" type="rgb"/>
+              <Color blue="d7" green="e4" red="c8" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="TH Sarabun New" size="30" style="0"/>
+              <Font name="TH Sarabun New" size="24" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="33" red="66" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#xe40;&#xe01;&#xe35;&#xe48;&#xe22;&#xe27;&#xe01;&#xe31;&#xe1a;&#xe40;&#xe23;&#xe32;"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -127,7 +139,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="280" y="0" width="120" height="100"/>
+              <AbsoluteConstraints x="240" y="0" width="110" height="100"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -147,6 +159,31 @@
             </Constraint>
           </Constraints>
         </Component>
+        <Component class="javax.swing.JToggleButton" name="cartBT">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="d7" green="e4" red="c8" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="TH Sarabun New" size="24" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="33" red="66" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="&#xe15;&#xe30;&#xe01;&#xe23;&#xe49;&#xe32;"/>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="null"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="cartBTMouseClicked"/>
+          </Events>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="700" y="0" width="100" height="100"/>
+            </Constraint>
+          </Constraints>
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="frameJP">
@@ -156,7 +193,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="Home home = new Home(frameJP);&#xa;ProductPage product = new ProductPage(frameJP);&#xa;WreathProductPage wpp = new WreathProductPage(frameJP);&#xa;OfferingProductPage ofp = new OfferingProductPage(frameJP);&#xa;CoffinProductPage cofpp = new CoffinProductPage(frameJP);&#xa;CandleProductPage canpp = new CandleProductPage(frameJP);&#xa;IncenseProductPage inpp = new IncenseProductPage(frameJP);&#xa;SnackBoxProductPage snackpp = new SnackBoxProductPage(frameJP);&#xa;SouvenirProductPage soupp = new SouvenirProductPage(frameJP);&#xa;SandalWoodProductPage sandpp = new SandalWoodProductPage(frameJP);&#xa;FrameProductPage framepp = new FrameProductPage(frameJP);&#xa;&#xa;CustomCoffin coffincustom = new CustomCoffin(frameJP);&#xa;CustomFuneral funeral = new CustomFuneral(frameJP);&#xa;CustomAsh ash = new CustomAsh(frameJP);&#xa;PackagePage packagepage = new PackagePage(frameJP);&#xa;&#xa;/*add each pages into cardlayout on frameJP*/&#xa;frameJP.add(home, &quot;home&quot;);&#xa;frameJP.add(product, &quot;productpage&quot;);&#xa;frameJP.add(wpp, &quot;wreathproductpage&quot;);&#xa;frameJP.add(ofp, &quot;offeringproductpage&quot;);&#xa;frameJP.add(cofpp, &quot;coffinproductpage&quot;);&#xa;frameJP.add(canpp ,&quot;candleproductpage&quot;);&#xa;frameJP.add(inpp, &quot;incenseproductpage&quot;);&#xa;frameJP.add(snackpp, &quot;snackboxproductpage&quot;);&#xa;frameJP.add(soupp, &quot;souvenirproductpage&quot;);&#xa;frameJP.add(sandpp, &quot;sandalwoodproductpage&quot;);&#xa;frameJP.add(framepp, &quot;frameproductpage&quot;);&#xa;&#xa;frameJP.add(coffincustom, &quot;coffincustom&quot;);&#xa;frameJP.add(funeral, &quot;funeral&quot;);&#xa;frameJP.add(ash, &quot;ash&quot;);&#xa;frameJP.add(packagepage, &quot;package&quot;);&#xa;&#xa;/*called home page(1st page)*/&#xa;CardLayout cd = (CardLayout) frameJP.getLayout();&#xa;cd.show(frameJP, &quot;home&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="Home home = new Home(frameJP);&#xa;ProductPage product = new ProductPage(frameJP);&#xa;WreathProductPage wpp = new WreathProductPage(frameJP);&#xa;OfferingProductPage ofp = new OfferingProductPage(frameJP);&#xa;CoffinProductPage cofpp = new CoffinProductPage(frameJP);&#xa;CandleProductPage canpp = new CandleProductPage(frameJP);&#xa;IncenseProductPage inpp = new IncenseProductPage(frameJP);&#xa;SnackBoxProductPage snackpp = new SnackBoxProductPage(frameJP);&#xa;SouvenirProductPage soupp = new SouvenirProductPage(frameJP);&#xa;SandalWoodProductPage sandpp = new SandalWoodProductPage(frameJP);&#xa;FrameProductPage framepp = new FrameProductPage(frameJP);&#xa;&#xa;CustomCoffin coffincustom = new CustomCoffin(frameJP);&#xa;CustomFuneral funeral = new CustomFuneral(frameJP);&#xa;CustomAsh ash = new CustomAsh(frameJP);&#xa;PackagePage packagepage = new PackagePage(frameJP);&#xa;Temple_select temS = new Temple_select(frameJP);&#xa;ProductInCart cart = new ProductInCart(frameJP);&#xa;/*add each pages into cardlayout on frameJP*/&#xa;frameJP.add(home, &quot;home&quot;);&#xa;frameJP.add(product, &quot;productpage&quot;);&#xa;frameJP.add(wpp, &quot;wreathproductpage&quot;);&#xa;frameJP.add(ofp, &quot;offeringproductpage&quot;);&#xa;frameJP.add(cofpp, &quot;coffinproductpage&quot;);&#xa;frameJP.add(canpp ,&quot;candleproductpage&quot;);&#xa;frameJP.add(inpp, &quot;incenseproductpage&quot;);&#xa;frameJP.add(snackpp, &quot;snackboxproductpage&quot;);&#xa;frameJP.add(soupp, &quot;souvenirproductpage&quot;);&#xa;frameJP.add(sandpp, &quot;sandalwoodproductpage&quot;);&#xa;frameJP.add(framepp, &quot;frameproductpage&quot;);&#xa;&#xa;frameJP.add(coffincustom, &quot;coffincustom&quot;);&#xa;frameJP.add(funeral, &quot;funeral&quot;);&#xa;frameJP.add(ash, &quot;ash&quot;);&#xa;frameJP.add(packagepage, &quot;package&quot;);&#xa;frameJP.add(temS, &quot;templeSelect&quot;);&#xa;frameJP.add(cart , &quot;cartPage&quot;);&#xa;/*called home page(1st page)*/&#xa;CardLayout cd = (CardLayout) frameJP.getLayout();&#xa;cd.show(frameJP, &quot;home&quot;);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
